# 02582_Computational_Data_Analysis

./: README.md  pyproject.toml
Week_1/: w1_ex1.ipynb  w1_ex2.ipynb  w1_ex3.ipynb  w1_ex4.ipynb
Week_10/: w11_ann_cylinder.ipynb  w11_ex2_regularization.ipynb  w11_ex4_SOM.ipynb
Week_11/: w10_ex1.ipynb  w10_ex2.ipynb  w10_ex4_solution.ipynb  w10_ex5_solution.ipynb  w10_ex6.ipynb  w10_ex7-8_solution.ipynb
Week_2/: w2_ex2.ipynb  w2_ex3.ipynb
Week_3/: w3_ex1.ipynb  w3_ex2.ipynb  w3_ex3.ipynb
Week_4/: Fisher_exercise.ipynb  W4_ex2.ipynb  W4_ex3.ipynb
Week_5/: w5_ex1.ipynb  w5_ex2.ipynb  w5_ex3.ipynb
Week_6/: w6_ex4.ipynb  w6_ex5.ipynb
Week_7/: w7_ex2.ipynb  w7_ex3.ipynb  w7_ex5.ipynb
Week_8/: PythonWeek6GetData.py  w8_ex1.ipynb  w8_ex2.ipynb  w8_ex3.ipynb
Week_9/: w9_ex2.ipynb  w9_ex3.ipynb  w9_ex4.ipynb  w9_kmeans_demo.ipynb
