[project]
name = "exercises"
version = "0.1.0"
description = "Project conatining the exercises for the class Computational Data Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
