[project]
name = "exercises"
version = "0.1.0"
description = "Project conatining the exercises for the class Computational Data Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "py-pcha>=0.1.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
